  can be used in HTML or Markdown hooks so the output is a
  self-contained document which does not need additional image files;
  opts_knit$get('upload') controls whether to upload images
  automatically (#66)

MINOR CHANGES

  o the default value for the 'output' argument in knit() is NULL now,
  so we can also provide output filenames to stitch() and knit2pdf()
  (#119)

  o the starting pattern of normal texts in an Rnw document is
  '^@\\s*%*' instead of '^@\\s*$' now, meaning you can write '@ % a
  comment' to end a code chunk (this is consistent with Sweave)

BUG FIXES

  o the object opts_current does not give the evaluated version of the
  current chunk options because it was created before the options are
  evaluated; this has been fixed and opts_current$get() will give the
  expected values of options (thanks, Frank Harrell)

  
			 CHANGES IN knitr VERSION 0.2

NEW FEATURES

  o added support for including child documents in a main document
  (like \SweaveInput{} but with different implementations); see
  http://yihui.name/knitr/demo/child/ (#92)

  o for inline R code, character results are returned as-is now
  (without \texttt{})

  o new function purl() as a wrapper to knit(..., tangle = TRUE) which
  extracts R code from the input document (thanks to Dieter Menne's
  wife who suggested the function name)

  o the error hook applies to inline R code when an error occurs in
  the inline R code, in which case knitr will not stop by default;
  instead, it writes the error message into the output (#85)

  o chunk option 'split' also works for HTML output now using
  '<iframe></iframe>' (#82)

  o knit() gained an argument `text` as an alternative to 'input'
  (#88)

  o new chunk option 'child' to include child documents into the main
  document (#92)

  o chunk option 'external' defaults to TRUE now (was FALSE by default
  in the last version)

  o added a new demo to show how to build package vignettes with